corrections API et app
