# app/Http/Controllers/Api/NoteController.php
@@ -17,7 +17,7 @@ class NoteController extends Controller
      *      path="/client/{id}/note",
      *      operationId="create",
      *      tags={"Note"},
-     *      summary="Add new Note",
+     *      summary="Add new note",
      *      description="Add a new note to the database. The 'id' variable represents the identifier of the client concerned.",
      *      
      *      @OA\Parameter(
@@ -51,11 +51,14 @@ class NoteController extends Controller
      */
     public function create(int $id)
     {
-        $rules = array(
+        $validator = Validator::make([
+            'id' => $id,
+            'rating' => request('rating')
+        ], [
             'id' => 'required|exists:clients',
             'rating' => 'required|integer|max:10|min:0'
-        );
-        $validator = Validator::make(['id' => $id, 'rating' => request('rating')], $rules);
+        ]);
+
         if ($validator->fails()){
             return response($validator->errors(), 400);
         }
@@ -73,8 +76,9 @@ class NoteController extends Controller
      *      path="/note/{id}",
      *      operationId="read",
      *      tags={"Note"},
-     *      summary="Read Note",
-     *      description="Returns information about the note identified by 'id'."
+     *      summary="Read note",
+     *      description="Returns information about the note identified by 'id'.",
+     *      
      *      @OA\Parameter(
      *          name="id",
      *          in="path",
@@ -130,7 +134,7 @@ class NoteController extends Controller
      *      path="/note/{id}",
      *      operationId="update",
      *      tags={"Note"},
-     *      summary="Update Note",
+     *      summary="Update note",
      *      description="Replaces the 'rating' value of the note obtained with the 'id' identifier by the 'rating' parameter.",
      *      @OA\Parameter(
      *          name="rating",
@@ -163,13 +167,19 @@ class NoteController extends Controller
      */
     public function update(int $id)
     {
-        $note = Note::findOrFail($id);
-        if ((request('rating') >= 0) && (request('rating') <= 10)) {
+        $rules = array(
+            'id' => 'required|exists:notes',
+            'rating' => 'required|integer|max:10|min:0'
+        );
+        $validator = Validator::make(['id' => $id, 'rating' => request('rating')], $rules);
+        if ($validator->fails()){
+            return response($validator->errors(), 400);
+        }
+        else {
+            $note = Note::findOrFail($id);
             $note->rating = request('rating');
             $note->save();
             return response($note, 201);
-        } else {
-            return response(['error' => 'Wrong value'], 400);
         }
     }
 
@@ -178,7 +188,7 @@ class NoteController extends Controller
      *      path="/note/{id}",
      *      operationId="delete",
      *      tags={"Note"},
-     *      summary="Delete Note",
+     *      summary="Delete note",
      *      description="Removes the note identified by 'id'.",
      *      
      *      @OA\Parameter(
