# resources/views/form.blade.php
@@ -3,7 +3,7 @@
 @section('content')
 <div class="body">
     <h3 style="margin: 3rem;text-align: center;">Quelle est la probabilité que vous recommandiez nos services à un proche?</h3>
-    <form method="post" action="/client/thanks">
+    <form method="post" action="{{ route('client.thanks', [$id_client]) }}">
         {{ csrf_field() }}
         <fieldset @if(false) disabled @endif>
             <p class="infoLeft">Très peu probable</p>
